--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a class="header-logo" href="./portfolio.html"
+          >Web<span>Studio</span></a
+        >
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
