--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <header class="header">
       <nav>
-        <a class="header-logo" href="./portfolio.html"
+        <a class="header-logo link" href="./portfolio.html"
           >Web<span>Studio</span></a
         >
         <ul>
