--- a/portfolio.html
+++ b/portfolio.html
@@ -15,24 +15,28 @@
   <body>
     <header class="header">
       <nav>
-        <a class="header-logo" href="./portfolio.html"
+        <a class="header-logo link" href="./portfolio.html"
           >Web<span>Studio</span></a
         >
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+        <ul class="list">
+          <li class="list-item">
+            <a class="link" href="./index.html">Studio</a>
+          </li>
+          <li class="list-item">
+            <a class="link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="list-item link"><a href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="address">
-        <ul>
+        <ul class="list">
           <li>
-            <a class="address-link" href="mailto:info@devstudio.com"
+            <a class="address-link link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="address-link" href="tel:+110001111111"
+            <a class="address-link link" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
