--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
           <li class="list-item">
             <a class="link" href="./portfolio.html">Portfolio</a>
           </li>
-          <li class="list-item link"><a href="">Contacts</a></li>
+          <li class="list-item"><a class="link" href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="address">
