--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
       </address>
     </header>
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <!-- section 1 -->
+      <section class="section">
+        <h1 class="section-title">Effective Solutions for Your Business</h1>
+        <button class="section-button" type="button">Order Service</button>
       </section>
       <section>
         <h2>About us</h2>
