--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
+    <!-- header -->
     <header class="header">
       <nav>
         <a class="header-logo link" href="./portfolio.html"
@@ -49,12 +50,13 @@
         <h1 class="section-title">Effective Solutions for Your Business</h1>
         <button class="section-button" type="button">Order Service</button>
       </section>
+      <!-- section2 -->
       <section>
-        <h2>About us</h2>
-        <ul>
+        <h2 class="list-title">About us</h2>
+        <ul class="list">
           <li>
             <h3>Strategy</h3>
-            <p>
+            <p class="list-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
@@ -83,8 +85,8 @@
         </ul>
       </section>
       <section>
-        <h2>What are we doing</h2>
-        <ul>
+        <h2 class="list-title">What are we doing</h2>
+        <ul class="list">
           <li>
             <img src="./images/display.jpg" alt="Display" width="360" />
           </li>
