--- a/index.html
+++ b/index.html
@@ -63,21 +63,21 @@
           </li>
           <li>
             <h3>Punctuality</h3>
-            <p>
+            <p class="list-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
             <h3>Diligence</h3>
-            <p>
+            <p class="list-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
             <h3>Technologies</h3>
-            <p>
+            <p class="list-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
