--- a/index.html
+++ b/index.html
@@ -55,28 +55,28 @@
         <h2 class="list-title">About us</h2>
         <ul class="list">
           <li>
-            <h3>Strategy</h3>
+            <h3 class="list-subtitle">Strategy</h3>
             <p class="list-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
+            <h3 class="list-subtitle">Punctuality</h3>
             <p class="list-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
+            <h3 class="list-subtitle">Diligence</h3>
             <p class="list-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
+            <h3 class="list-subtitle">Technologies</h3>
             <p class="list-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -99,27 +99,27 @@
         </ul>
       </section>
       <section>
-        <h2>Our Team</h2>
+        <h2 class="list-title">Our Team</h2>
         <ul>
           <li>
             <img src="./images/mark.jpg" alt="Mark Guerrero" width="264" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="list-subtitle">Mark Guerrero</h3>
+            <p class="list-text">Product Designer</p>
           </li>
           <li>
             <img src="./images/tom.jpg" alt="Tom Ford" width="264" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="list-subtitle">Tom Ford</h3>
+            <p class="list-text">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/camila.jpg" alt="Camila Garcia" width="264" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="list-subtitle">Camila Garcia</h3>
+            <p class="list-text">Marketing</p>
           </li>
           <li>
             <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="list-subtitle">Daniel Wilson</h3>
+            <p class="list-text">UI Designer</p>
           </li>
         </ul>
       </section>
