--- a/portfolio.html
+++ b/portfolio.html
@@ -143,9 +143,11 @@
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./portfolio.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a class="header-logo link" href="./portfolio.html"
+        >Web<span class="header-logo-studio">Studio</span></a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
