--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header">
       <nav>
         <a class="header-logo link" href="./portfolio.html"
-          >Web<span>Studio</span></a
+          >Web<span class="header-logo-studio">Studio</span></a
         >
         <ul class="list">
           <li class="list-item">
@@ -84,6 +84,7 @@
           </li>
         </ul>
       </section>
+      <!-- section 3 -->
       <section>
         <h2 class="list-title">What are we doing</h2>
         <ul class="list">
@@ -98,25 +99,26 @@
           </li>
         </ul>
       </section>
-      <section>
+      <!-- section 4 -->
+      <section class="section-team">
         <h2 class="list-title">Our Team</h2>
-        <ul>
-          <li>
+        <ul class="list">
+          <li class="team-list-item">
             <img src="./images/mark.jpg" alt="Mark Guerrero" width="264" />
             <h3 class="list-subtitle">Mark Guerrero</h3>
             <p class="list-text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-list-item">
             <img src="./images/tom.jpg" alt="Tom Ford" width="264" />
             <h3 class="list-subtitle">Tom Ford</h3>
             <p class="list-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-list-item">
             <img src="./images/camila.jpg" alt="Camila Garcia" width="264" />
             <h3 class="list-subtitle">Camila Garcia</h3>
             <p class="list-text">Marketing</p>
           </li>
-          <li>
+          <li class="team-list-item">
             <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264" />
             <h3 class="list-subtitle">Daniel Wilson</h3>
             <p class="list-text">UI Designer</p>
@@ -126,7 +128,7 @@
     </main>
     <footer class="footer">
       <a class="header-logo link" href="./portfolio.html"
-        >Web<span class="header-logo-studio">Studio</span></a
+        >Web<span class="footer-logo-studio">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
