--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
     <header class="header">
       <nav>
         <a class="header-logo link" href="./portfolio.html"
-          >Web<span>Studio</span></a
+          >Web<span class="header-logo-studio">Studio</span></a
         >
         <ul class="list">
           <li class="list-item">
@@ -145,7 +145,7 @@
     </main>
     <footer class="footer">
       <a class="header-logo link" href="./portfolio.html"
-        >Web<span class="header-logo-studio">Studio</span></a
+        >Web<span class="footer-logo-studio">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
