--- a/portfolio.html
+++ b/portfolio.html
@@ -44,100 +44,97 @@
       </address>
     </header>
     <main>
-      <!-- section filter-->
+      <!-- section-->
       <section class="filter">
-        <h2></h2>
-        <ul>
+        <h1 class="section-title">advantages</h1>
+        <ul class="list">
           <li>
-            <button class="filter-button" type="button">all</button>
+            <button class="filter-button" type="button">All</button>
           </li>
           <li>
-            <button class="filter-button" type="button">web site</button>
+            <button class="filter-button" type="button">Web Site</button>
           </li>
           <li>
-            <button class="filter-button" type="button">app</button>
+            <button class="filter-button" type="button">App</button>
           </li>
           <li>
-            <button class="filter-button" type="button">design</button>
+            <button class="filter-button" type="button">Design</button>
           </li>
           <li>
-            <button class="filter-button" type="button">marketing</button>
+            <button class="filter-button" type="button">Marketing</button>
           </li>
         </ul>
-      </section>
-      <!-- section block -->
-      <section>
-        <h2></h2>
-        <ul>
+
+        <ul class="list">
           <li>
-            <a href="./portfolio.html">
+            <a class="link" href="./portfolio.html">
               <img
                 width="360"
                 src="./images/stend-wellpapers.jpg"
                 alt="stend wellpapers"
               />
-              <h3>Banking App Interface Concept</h3>
-              <p>app</p>
+              <h2 class="list-title">Banking App Interface Concept</h2>
+              <p class="portfolio-list-text">App</p>
             </a>
           </li>
           <li>
-            <a href="./portfolio.html">
+            <a class="link" href="./portfolio.html">
               <img width="360" src="./images/qr-scan.jpg" alt="qr-scan" />
-              <h3>Cashless Payment</h3>
-              <p>Marketing</p>
+              <h2 class="portfolio-list-title">Cashless Payment</h2>
+              <p class="list-text">Marketing</p>
             </a>
           </li>
           <li>
-            <a href="./portfolio.html">
+            <a class="link" href="./portfolio.html">
               <img
                 width="360"
                 src="./images/laptop-iphone.jpg"
                 alt="laptop iphone"
               />
-              <h3>Meditaion App</h3>
-              <p>App</p>
+              <h2 class="portfolio-list-title">Meditaion App</h2>
+              <p class="list-text">App</p>
             </a>
           </li>
           <li>
-            <a href="./portfolio.html">
+            <a class="link" href="./portfolio.html">
               <img width="360" src="./images/car.jpg" alt="car" />
-              <h3>Taxi Service</h3>
-              <p>Marketing</p>
+              <h2 class="portfolio-list-title">Taxi Service</h2>
+              <p class="list-text">Marketing</p>
             </a>
           </li>
           <li>
-            <a href="./portfolio.html">
+            <a class="link" href="./portfolio.html">
               <img width="360" src="./images/wallpapers.jpg" alt="wallpapers" />
-              <h3>Screen Illustrations</h3>
-              <p>Design</p>
+              <h2 class="portfolio-list-title">Screen Illustrations</h2>
+              <p class="list-text">Design</p>
             </a>
           </li>
           <li>
-            <a href="./portfolio.html">
+            <a class="link" href="./portfolio.html">
               <img width="360" src="./images/girls.jpg" alt="girls" />
-              <h3>Online Courses</h3>
-              <p>Marketing</p>
+              <h2 class="portfolio-list-title">Online Courses</h2>
+              <p class="list-text">Marketing</p>
             </a>
           </li>
           <li>
-            <a href="./portfolio.html">
+            <a class="link" href="./portfolio.html">
               <img width="360" src="./images/stend.jpg" alt="stend" />
-              <h3>Instagram Stories Concept</h3>
-              <p>Design</p>
+              <h2 class="portfolio-list-title">Instagram Stories Concept</h2>
+              <p class="list-text">Design</p>
             </a>
           </li>
           <li>
-            <a href="./portfolio.html">
+            <a class="link" href="./portfolio.html">
               <img width="360" src="./images/woman.jpg" alt="woman" />
-              <h3>Organic Food</h3>
-              <p>Web Site</p>
+              <h2 class="portfolio-list-title">Organic Food</h2>
+              <p class="list-text">Web Site</p>
             </a>
           </li>
           <li>
-            <a href="./portfolio.html">
+            <a class="link" href="./portfolio.html">
               <img width="360" src="./images/coffe.jpg" alt="coffe" />
-              <h3>Fresh Coffee</h3>
-              <p>Web Site</p>
+              <h2 class="portfolio-list-title">Fresh Coffee</h2>
+              <p class="list-text">Web Site</p>
             </a>
           </li>
         </ul>
