--- a/portfolio.html
+++ b/portfolio.html
@@ -91,7 +91,7 @@
                 src="./images/laptop-iphone.jpg"
                 alt="laptop iphone"
               />
-              <h2 class="portfolio-list-title">Meditaion App</h2>
+              <h2 class="portfolio-list-title">Meditation App</h2>
               <p class="list-text">App</p>
             </a>
           </li>
