--- a/portfolio.html
+++ b/portfolio.html
@@ -73,7 +73,9 @@
                 src="./images/stend-wellpapers.jpg"
                 alt="stend wellpapers"
               />
-              <h2 class="list-title">Banking App Interface Concept</h2>
+              <h2 class="portfolio-list-title">
+                Banking App Interface Concept
+              </h2>
               <p class="portfolio-list-text">App</p>
             </a>
           </li>
