--- a/portfolio.html
+++ b/portfolio.html
@@ -47,6 +47,7 @@
       <!-- section-->
       <section class="filter">
         <h1 class="section-title">advantages</h1>
+        <!-- list button -->
         <ul class="list">
           <li>
             <button class="filter-button" type="button">All</button>
@@ -64,7 +65,7 @@
             <button class="filter-button" type="button">Marketing</button>
           </li>
         </ul>
-
+        <!-- list block -->
         <ul class="list">
           <li>
             <a class="link" href="./portfolio.html">
@@ -83,7 +84,7 @@
             <a class="link" href="./portfolio.html">
               <img width="360" src="./images/qr-scan.jpg" alt="qr-scan" />
               <h2 class="portfolio-list-title">Cashless Payment</h2>
-              <p class="list-text">Marketing</p>
+              <p class="portfolio-list-text">Marketing</p>
             </a>
           </li>
           <li>
@@ -94,49 +95,49 @@
                 alt="laptop iphone"
               />
               <h2 class="portfolio-list-title">Meditation App</h2>
-              <p class="list-text">App</p>
+              <p class="portfolio-list-text">App</p>
             </a>
           </li>
           <li>
             <a class="link" href="./portfolio.html">
               <img width="360" src="./images/car.jpg" alt="car" />
               <h2 class="portfolio-list-title">Taxi Service</h2>
-              <p class="list-text">Marketing</p>
+              <p class="portfolio-list-text"">Marketing</p>
             </a>
           </li>
           <li>
             <a class="link" href="./portfolio.html">
               <img width="360" src="./images/wallpapers.jpg" alt="wallpapers" />
               <h2 class="portfolio-list-title">Screen Illustrations</h2>
-              <p class="list-text">Design</p>
+              <p class="portfolio-list-text">Design</p>
             </a>
           </li>
           <li>
             <a class="link" href="./portfolio.html">
               <img width="360" src="./images/girls.jpg" alt="girls" />
               <h2 class="portfolio-list-title">Online Courses</h2>
-              <p class="list-text">Marketing</p>
+              <p class="portfolio-list-text">Marketing</p>
             </a>
           </li>
           <li>
             <a class="link" href="./portfolio.html">
               <img width="360" src="./images/stend.jpg" alt="stend" />
               <h2 class="portfolio-list-title">Instagram Stories Concept</h2>
-              <p class="list-text">Design</p>
+              <p class="portfolio-list-text">Design</p>
             </a>
           </li>
           <li>
             <a class="link" href="./portfolio.html">
               <img width="360" src="./images/woman.jpg" alt="woman" />
               <h2 class="portfolio-list-title">Organic Food</h2>
-              <p class="list-text">Web Site</p>
+              <p class="portfolio-list-text">Web Site</p>
             </a>
           </li>
           <li>
             <a class="link" href="./portfolio.html">
               <img width="360" src="./images/coffe.jpg" alt="coffe" />
               <h2 class="portfolio-list-title">Fresh Coffee</h2>
-              <p class="list-text">Web Site</p>
+              <p class="portfolio-list-text">Web Site</p>
             </a>
           </li>
         </ul>
