--- a/portfolio.html
+++ b/portfolio.html
@@ -102,7 +102,7 @@
             <a class="link" href="./portfolio.html">
               <img width="360" src="./images/car.jpg" alt="car" />
               <h2 class="portfolio-list-title">Taxi Service</h2>
-              <p class="portfolio-list-text"">Marketing</p>
+              <p class="portfolio-list-text">Marketing</p>
             </a>
           </li>
           <li>
